# Apple_finance

./: README.md  config.py  main.py  pyproject.toml  scrape.py  script_name.py
agent/: graph.py  memory.py  nodes.py  prompts.py  state.py  tools.py
chroma_db/: chroma.sqlite3
eval/: harness.py  questions.json
ingest/: chunker.py  embedder.py
processed/: 10k_4.txt
sections/: 10k_0_item_1a.txt  10k_0_item_7.txt  10k_1_item_1.txt  10k_1_item_1a.txt  10k_1_item_7a.txt  10k_2_item_1a.txt  10k_2_item_7.txt  10k_2_item_7a.txt  10k_3_item_1a.txt  10k_4_item_1.txt  10k_4_item_1a.txt  10k_4_item_7.txt  10k_4_item_7a.txt
server/: api.py  schemas.py
tests/: test_memory.py
ui/: index.html
